 - Fixed an issue where bookmark properties would not save when edited from
   within the Library.
 - Tweaked some spelling rules to prevent invalid vowel sequences.
 - Updated support for the latest BlueGriffon nightlies.
 - Fixed editing in BlueGriffon's rich text editor with AVIM enabled.

Version 20080728.290 (Saturday, February 7, 2008)
 - Fixed a security issue that allowed malicious webpages to execute arbitrary
   JavaScript as privileged code.
 - Improved performance when editing a multiline textbox with a large amount of
   text.
 - Added experimental support for the IME and DiMENSiON extension.

Version 20080728.306 (Saturday, February 14, 2008)
 - Eliminated lag when adding diacritics. Editing a textbox with a large amount
   of text no longer incurs any noticeable delay.
 - Added support for the SciMoz plugin (Scintilla) in Komodo IDE and Komodo
   Edit.
 - Fixed an issue where the entire contents of the textbox were selected after
   undoing; the cursor now stays in place.
 - Fixed automatic shifting forward of diacritics (for example, "to'an" becomes
   "toa'n").
 - Fixed an issue where textboxes inside webpages would not update after adding
   diacritics.
 - Fixed an issue in rich text editors where diacritics were lost after undoing
   then redoing.
 - The Mudim script is disabled by default, since Mudim is widespread and
   disabling it does not significantly impact performance.
 - Unicode characters are now allowed in ignored textbox IDs.
 - Pressing Enter while focused on the ID textbox adds the ID to the list.
 - Pressing Backspace or Delete while focused on the Ignored Textboxes list
   removes the selected textbox IDs from the list.
 - AVIM now checks a textbox's name in addition to its ID when determining
   whether to ignore the textbox.

Version ${Version} (${Date})
 - Fixed an issue in Komodo IDE and Komodo Edit where AVIM would not recogize
   SciMoz's wrapper frame, which is often focused instead of SciMoz itself.